--- a/HTML练习.html
+++ b/HTML练习.html
@@ -2,10 +2,12 @@
 <head>
 <title>练习HTML网页</title>
 </head>
-<body>
-<h1>这是一张图片</h1>
+<body style="background-color:rgb(244, 247, 247);text-align:center;">
+<h1 style="text-align:center;font-family:arial;color:rgba(11, 12, 12, 0.85);">这是一张图片</h1>
 <img src="原神.jpg" width="600" height="300"/>
-<p>场景描述了重云、荧与小孩子玩闹的场景</p>
+<p style="font-size:20px;text-align:left;">
+场景描述了重云、荧与小孩子玩闹的场景
+</p>
 <a href="https://ys.mihoyo.com"> 原神</a>
 </body>
 </html>
