--- a/HTML练习.html
+++ b/HTML练习.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>练习HTML网页</title>
 </head>
+<!--这里规定了页面的背景颜色，还有内容位置（居中）-->
 <body style="background-color:rgb(244, 247, 247);text-align:center;">
-<h1 style="text-align:center;font-family:arial;color:rgba(11, 12, 12, 0.85);">这是一张图片</h1>
+<h1 style="text-align:center;font-family:黑体;color:rgba(11, 12, 12, 0.85);">这是一张图片</h1>
 <img src="原神.jpg" width="600" height="300"/>
-<p style="font-size:20px;text-align:left;">
+<p style="font-size: 10px;text-align:left;text-align: center;">
 场景描述了重云、荧与小孩子玩闹的场景
 </p>
+
+<br>
+<br>
 <a href="https://ys.mihoyo.com"> 原神</a>
 </body>
 </html>
