--- a/HTML练习.html
+++ b/HTML练习.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>练习HTML网页</title>
+<title>原神——小精灵斯露莎获取方式</title>
 </head>
 <!--这里规定了页面的背景颜色，还有内容位置（居中）-->
-<body style="background-color:rgb(244, 247, 247);text-align:center;">
-<h1 style="text-align:center;font-family:黑体;color:rgba(11, 12, 12, 0.85);">这是一张图片</h1>
-<img src="原神.jpg" width="600" height="300"/>
-<p style="font-size: 10px;text-align:left;text-align: center;">
-场景描述了重云、荧与小孩子玩闹的场景
-</p>
-
+<body style="background-color:rgb(212, 247, 247);text-align:center;">
+<h1 style="text-align:center;font-family:黑体;color:rgba(11, 12, 12, 0.85);">3.6版本新增小精灵-斯露莎</h1>
+<h2>获取方式</h2>
+<p>1、到达熔铁的孤塞副本下方的传送点附近，挖掘后得到一个鼓和纸条</p>
+<img src="1.jpg" width="600" height="300"/>
 <br>
+<img src="2.jpg" width="600" height="300"/>
 <br>
-<a href="https://ys.mihoyo.com"> 原神</a>
+<p>2、去须弥城寻找凯瑟琳，一段对话过后开启任务</p>
+<br>
+<img src="3.jpg" width="600" height="300"/>
+<br>
+<p>3、前往铁穆山附近，与阵营附近的人对话,这里要注意一下，对话后会有一场战斗，做好战斗准备</p>
+<br>
+<img src="4.jpg" width="600" height="300"/>
+<br>
+<img src="5.jpg" width="600" height="300"/>
+<p>4、接下来跟随斯露莎前进并且击败深渊法师和丘丘人,走到前面发现灰余晶，利用灵光的力量消除灰余晶</p>
+<br>
+<img src="6.jpg" width="600" height="300"/>
+<br>
+<img src="7.jpg" width="600" height="300"/>
+<br>
+<img src="8.jpg" width="600" height="300"/>
+<br>
+<img src="9.jpg" width="600" height="300"/>
+<br>
+<img src="10.jpg" width="600" height="300"/>
+<p style="text-align:center;font-size: 10px;" > (这里可以获得一个成就【黑泥中的光辉】) </p>
+<br>
+<p>5、前往矫论团的修行地，与矫论团的首领对话，经过很长一段对话后可以获得一个小精灵-斯露莎</p>
+<br>
+<img src="11.jpg" width="600" height="300"/>
+<br>
+<img src="12.jpg" width="600" height="300"/>
+<br>
+<img src="13.jpg" width="600" height="300"/>
 </body>
 </html>
